--- a/installer/public/resources/scss/_table-control.scss
+++ b/installer/public/resources/scss/_table-control.scss
@@ -130,7 +130,7 @@ $table-control-row-bg-hover: #b5dbf6;
 
 // ----------- table content
 .umi-table-control-content-wrapper{
-    height: calc(100% - 74px - 29px);
+    height: calc(100% - 66px - 32px);
     position: relative;
     &:before{
         content: "";
@@ -205,17 +205,15 @@ $table-control-row-bg-hover: #b5dbf6;
     box-sizing: border-box;
     overflow: hidden;
     &.filter{
-        padding-top: rem-calc(3);
         input{
             padding: 0 rem-calc(6);
-            margin-top: 3px;
-            height: 21px !important;
-            width: unquote("calc(100% - 24px)");
-            margin-bottom: 0;
+            margin: 5px 0;
+            height: 22px !important;
+            width: unquote("calc(100% - 18px)");
             float: left;
         }
         .sort-handler{
-            margin-bottom: 0;
+            margin: 4px -7px 0 0;
             float: right;
             opacity: .4;
             &.active{
@@ -277,15 +275,23 @@ $table-control-row-bg-hover: #b5dbf6;
     }
 }
 
+.umi-table-control-group-crud{
+    a{
+        float: left;
+        padding: 6px;
+        border-right: 1px solid #c0c2ca;
+    }
+}
+
 .umi-table-control-pagination{
-    padding: rem-calc(5) rem-calc(10);
+    padding: rem-calc(5 10);
     .pagination-controls{
         .pagination-counter{
             line-height: 24px;
             margin-right: 15px;
         }
         ~ .pagination-limit{
-            margin-left: 30px;
+            margin-right: 30px;
         }
         .button{
             margin-bottom: 0;
@@ -306,7 +312,7 @@ $table-control-row-bg-hover: #b5dbf6;
     }
     input{
         display: inline-block;
-        padding: 0 rem-calc(5);
+        padding: rem-calc(0 5);
         height: rem-calc(24);
         width: 50px;
     }
